jellyfin/jellyfin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
spec:
  ports:
    - port: 8096
      targetPort: 8096
  selector:
    app: jellyfin
