jellyfin/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-dashboard-route
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  # 这里设置你的域名
    - match: Host(`jellyfin.li.com`)
      kind: Rule
      services:
        - name: jellyfin-svc
          port: 8096
  tls:
    secretName: https
